# ChiEngine

./: .gitignore  CMakeLists.txt  MagicMoves.h  README.md  Types.h  ZobristHasher.h
data/: evaluate.py  fenUtils.py  filter_pgns.py  loader.py  process_data.py  test.py  train.py
data/net/: 88acc_ccrl3000evalNN50epoch.pth  ccrl3000evalNN25epoch.pth  ccrl3000evalNN50epoch.pth  ccrl3000eval_scripted_short.p  evalNN200epoch.pth  evalNN200epoch_scripted.pt  evalNN50epoch.pth
data/net/autoencoder/: fingerprint.pb  keras_metadata.pb  saved_model.pb
data/net/autoencoder/variables/: variables.index
googletests/: Benchmarks.cpp  BoardTest.cpp  CMakeLists.txt  CalcAttackBitboard.cpp  Evaluation.cpp  GetMoves.cpp  GetPawnMoves.cpp  InferenceTest.cpp  IsLegal.cpp  MagicMoves.cpp  MakeUnmake.cpp  ParseFen.cpp  ParseMove.cpp  ParseMoveTest.cpp  Perft.cpp  Playground.cpp  Search.cpp  TranspositionTable.cpp
googletests/lib/googlemock/: CMakeLists.txt
googletests/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-spec-builders.h  gmock.h
googletests/lib/googlemock/include/gmock/internal/: gmock-port.h
googletests/lib/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
googletests/lib/googletest/: CMakeLists.txt
googletests/lib/googletest/cmake/: internal_utils.cmake
googletests/lib/googletest/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h  gtest_prod.h
googletests/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h
googletests/lib/googletest/src/: gtest-all.cc  gtest-assertion-result.cc  gtest-death-test.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
src/: Algorithms.cpp  Algorithms.h  Board.cpp  Board.h  CMakeLists.txt  ChessEngine.cpp  Engine.cpp  Engine.h  Eval.cpp  Eval.h  Evaluate.cpp  Evaluate.h  InputThread.cpp  InputThread.h  MagicMoves.cpp  MagicMoves.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Search.cpp  Search.h  TTable.cpp  TTable.h  Types.h  ZobristHasher.cpp  main.cpp
src/engine/: Board.cpp  Board.h  CMakeLists.txt  Evaluate.cpp  Evaluate.h  README.md  debug.cpp
src/engine/net/: ccrl3000eval.p
src/googletests/: CMakeLists.txt  IsLegal.cpp  MagicMoves.cpp
test/: BoardTest.cpp  CMakeLists.txt
